--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <i class="fas fa-infinity fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">NeuroEvolution</h4>
-          <p class="text-muted">We believe that next big thing in AI will be related to bio-inspired algorithms.</p>
+          <p class="text-muted">We believe that the next big thing in AI will be related to the bio-inspired evolutionary algorithms.</p>
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
@@ -109,7 +109,7 @@
             <i class="fas fa-microchip fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">Hardware</h4>
-          <p class="text-muted">Our core believe that cognitive system must be embodied to acquire general intelligence.</p>
+          <p class="text-muted">Our core beliefs that cognitive systems must be embodied to acquire general intelligence.</p>
         </div>
       </div>
     </div>
@@ -249,7 +249,7 @@
                   <h4 class="subheading">Ineractive Art Installations</h4>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">Using advanced computer vision techniques we built interactive art installations and interactive promotional stands for well-known international brands. We designed and implemented IoT hardware platforms for Bluetooth proximity marketing installations. We built augmented reality based installation for motor show exhibition. We designed and implemented music generation system used on several mass events.</p>
+                  <p class="text-muted">Using advanced computer vision techniques we built interactive art installations and interactive promotional stands for well-known international brands. We designed and implemented IoT hardware platforms for Bluetooth proximity marketing installations. We built augmented reality-based installation for motor show exhibition. We designed and implemented the music generation system used on several mass events.</p>
                 </div>
               </div>
             </li>
@@ -263,7 +263,7 @@
                   <h4 class="subheading">Deep Machine Learning</h4>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">We started with active research and exploration of deep machine learning techniques and algorithms. Our team participated in multitude of ML/DS contests. We do active research in the area of evolutionary computation and brain-computer inetrface. Our papers was published at arXiv, ResearchGate, Preprints, etc.</p>
+                  <p class="text-muted">We started with active research and exploration of deep machine learning techniques and algorithms. Our team participated in a multitude of ML/DS contests. We do active research in the area of evolutionary computation and brain-computer interfaces. Our papers were published at arXiv, ResearchGate, Preprints, etc.</p>
                 </div>
               </div>
             </li>
