--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="img/logo.png" alt="Logo" width="220px" height="42px"></a>
+      <a class="navbar-brand js-scroll-trigger" href="http://www.newground.ua"><img src="img/logo.png" alt="Logo" width="220px" height="42px"></a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
