--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
         </div>
         <div class="col-md-4 contact-info text-center">
             <h2 class="section-heading">Address</h2>
-            <h3 class="section-subheading">58 Antonovycha Street, Kyiv, Ukraine</h3>
+            <h3 class="section-subheading">16-A Knyazhiy Zaton Street, Kyiv, Ukraine</h3>
         </div>
       </div>
     </div>
