--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
       <div class="row">
         <div class="col-md-4 contact-info text-center">
             <h2 class="section-heading">Call Us</h2>
-            <h3 class="section-subheading">+38 044 200 04 43</h3>
+            <h3 class="section-subheading">+1 (206) 401-7553</h3>
         </div>
         <div class="col-md-4 contact-info text-center">
             <h2 class="section-heading">Email Us</h2>
@@ -462,7 +462,7 @@
         </div>
         <div class="col-md-4 contact-info text-center">
             <h2 class="section-heading">Address</h2>
-            <h3 class="section-subheading">16-A Knyazhiy Zaton Street, Kyiv, Ukraine</h3>
+            <h3 class="section-subheading">Two Union Square 601 Union St, Seattle, WA 98101</h3>
         </div>
       </div>
     </div>
@@ -473,7 +473,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-4">
-          <span class="copyright">Copyright &copy; NewGround LLC 2019</span>
+          <span class="copyright">Copyright &copy; NewGround LLC 2020</span>
         </div>
         <div class="col-md-4">
           <ul class="list-inline social-buttons">
